Fix menu display on mobile

--- a/resources/css/coffee-menu-styles.css
+++ b/resources/css/coffee-menu-styles.css
@@ -126,7 +126,7 @@ hr {
     width: 90%;
   }
   .drink {
-    width: 84%;
+    width: 81%;
   }
   #logo {
     width: 45%;
